# --QMUL--spatialisation-as-a-service

./: .clocignore  .gitignore  README.md  cloc_output.txt
.run/: Compile Bibliography.run.xml  Compile Report.run.xml
docs/project-definition/: glossary.tex  project-definition.bib  project-definition.tex
docs/src/: abstract.tex  glossary.tex  main.bib  main.tex  saas_architecture_final_svg-tex.pdf_tex  titlepage.tex  wordcount.html  wordcount.tex
docs/src/appendices/: acknowledgements.tex  code-snippets.tex  glossary.tex  other-appendices.tex
docs/src/sections/: abstract.tex  acknowledgements.tex  conclusions.tex  discussion.tex  further-work.tex  implementation.tex  infra-design.tex  introduction.tex  literature-review.tex  project-plan.tex  requirement-capture.tex  risk-assessment.tex  summary-of-progress.tex  testing-and-evaluation.tex
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/tests/: happy_path.spec.ts
functions/: wav-file-writer.cpp
lambda/source-separation/: Dockerfile  README.md  requirements.txt
lambda/source-separation/app/: app.py
lambda/spatialisation/: CMakeLists.txt  Dockerfile  README.md  main.cpp  spatialiser.cpp  spatialiser.h
lambda/spatialisation/src/: lambda_handler.cpp  lambda_handler.h  main.cpp  spatialiser.cpp  spatialiser.h
lambda/spatialisation/utils/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  VerifyRequest.cpp  VerifyRequest.h  verify_request.cpp  verify_request.h
step-function/: spatialisation-as-a-service.json
ui/: .gitignore  .npmrc  package-lock.json  package.json
ui/playwright/: index.tsx
ui/playwright-report/: index.html
ui/playwright/.cache/: index.html  metainfo.json
ui/playwright/.cache/assets/: index.a99e3c0a.css  index.d664d65c.js  index.d664d65c.js.map
ui/public/: index.html
ui/public/prefabs/head/: head.glb  scene.gltf
ui/src/: App.spec.tsx  App.tsx  app.module.scss  environment.d.ts  index.tsx
ui/src/components/: body.tsx  footer.tsx  header.tsx
ui/src/libs/: s3Client.ts  snsClient.ts  sqsClient.ts  stepFunctionsClient.ts
ui/src/stylesheets/: App.css  _normalize.scss  global.css  styles.scss
(+31 files in other folders)
